                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-08-2006 fixed: mockup in the kai client with the new evil b button.
 - 24-08-2006 added: you can now lock the screensaver.
 - 24-08-2006 fixed: mockup in my programs with the new evil b button.
 - 24-08-2006 fixed: loginscreen first activated the home window, then your prefered startup window.
 - 24-08-2006 fixed: HDD S.M.A.R.T Requesting of non (ID:17) will cause a loop request! http://www.xboxmediacenter.com/wiki/index.php?title=InfoLabels&action=submit
 - 23-08-2006 fixed: adding bookmarks wouldn't generate proper video thumbnails
 - 22-08-2006 added: songinfoduration tag to advancedsettings.xml. controls how long song info remains onscreen after song change in visualisation
		     valid range is 1 to 15, in seconds. example: <songinfoduration>10</songinfoduration>
 - 22-08-2006 added: SmartXX v3 and OPX full RGB PWM control (http://www.xboxmediacenter.com/wiki/index.php?title=List_of_Built_In_Functions)
                     BuildIn Command: XBMC.system.pwmcontrol(#rrggbb,#rrggbb,action,time)
                     e.g.: blink Blue <onclick>XBMC.system.pwmcontrol(#0000FF,#000000,blink,100)</onclick>
		     Thanks to www.freakware.com for sponsoring some SmartXX v3
 - 22-08-2006 added: popup informations if xbox memory units are detected
 - 22-08-2006 added: XBOX Autodetection now creates a Virtual ftp share on sucessfull detection
 - 22-08-2006 removed: Settings, XBOX autodetection Createlink, no longer needed
 - 22-08-2006 fixed: [ 1476262 ] System Info error while playing music
 - 22-08-2006 added: Systeminfo: display Memunit information