@@ -10,6 +10,7 @@ public:
   virtual bool OnMessage(CGUIMessage &message);
   static bool ShowAndGetLock(int& iLockMode, CStdString& strPassword, int iHeader=20091);
   static bool ShowAndGetLock(int& iLockMode, CStdString& strPassword, bool& bLockMusic, bool& bLockVideo, bool& bLockPictures, bool& bLockPrograms, bool& bLockFiles, bool& bLockSettings, int iButtonLabel=20091,bool bDetails=true);
+  static bool ShowAndGetUserAndPassword(CStdString& strUser, CStdString& strPassword, const CStdString& strURL);
 protected:
   virtual void OnInitWindow();
   virtual void SetupPage();
@@ -18,8 +19,11 @@ protected:
 
   int m_iLock;
   CStdString m_strLock;
+  CStdString m_strUser;
+  CStdString m_strURL;
   bool m_bChanged;
   bool m_bDetails;
+  bool m_bGetUser;
   int m_iButtonLabel;
   bool m_bLockMusic; 
   bool m_bLockVideo;
